--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /.deps
+/build
+__pycache__
 *.o
+*.so
 *.gcda
 *.gcno
 /c4irp.info
@@ -12,3 +15,4 @@
 /.cache
 /.coverage
 /c4irp.egg-info/
+/c4irp/*.c
