--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
+  - "2.7"
+  - "3.4"
   - "3.5"
+  - "pypy"
 # command to install dependencies
 install: "pip install -r .requirements.txt"
 # command to run tests
@@ -12,3 +15,4 @@ git:
 before_install:
     - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
     - git submodule update --init --recursive
+    - apt-get install llvm
