--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+sudo: required
 python:
   - "2.7"
   - "3.4"
@@ -15,4 +16,4 @@ git:
 before_install:
     - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
     - git submodule update --init --recursive
-    - apt-get install llvm
+    - sudo apt-get install llvm
