--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ git:
     submodules: false
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 before_install:
-  - llvm-cov --help
+  - llvm-cov -version
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
