--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ git:
     submodules: false
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 before_install:
+  - apt-cache search llvm
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
