--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ branches:
 # command to install dependencies
 install: "pip install -r .requirements.txt"
 # command to run tests
-script: .test.sh
+script: ./.test.sh
