--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ branches:
 install: "pip install -r .requirements.txt"
 # command to run tests
 script: ./.test.sh
+before_install:
+  - apt-get install clang llvm
