--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install: "pip install -r .requirements.txt"
 # command to run tests
 script: ./.test.sh
 before_install:
-  - sudo apt-get install clang llvm
+  - sudo apt-get -y install clang llvm
