--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,8 @@ install: "pip install -r .requirements.txt"
 # command to run tests
 script: ./.test.sh
 before_install:
+  - ./.fix-pypy1.sh
+  - export PATH=$HOME/.pyenv/bin:$PATH
+  - ./.fix-pypy2.sh
+  - eval "$(pyenv init -)"
   - sudo apt-get -y install clang llvm
