--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - export PATH=$HOME/.pyenv/bin:$PATH
   - ./.scripts/fix-pypy2.sh
   - eval "$(pyenv init -)"
-  - sudo apt-get -y install clang llvm cppcheck build-essential
+  - sudo apt-get -y --install-suggests reinstall clang llvm cppcheck build-essential libc6-dev
   - cppcheck --version
   - cat /etc/apt/sources.list
   - cat /etc/apt/sources.list.d/*
