--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,12 @@ branches:
 # command to install dependencies
 install: "pip install -r .requirements.txt"
 # command to run tests
-script: sudo ./.scripts/test.sh
+script: ./.scripts/test.sh
 before_install:
   - ./.scripts/fix-pypy1.sh
   - export PATH=$HOME/.pyenv/bin:$PATH
   - ./.scripts/fix-pypy2.sh
   - eval "$(pyenv init -)"
   - sudo apt-get -y install clang llvm cppcheck build-essential
+  - ll /usr/include/limits.h
+  - sudo chmod 777 /usr/include/limits.h
