--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ sudo: required
 
 language: generic
 
-matrix:
-  - PYTHON_ENV_VER=3.5.2
-  - PYTHON_ENV_VER=2.7.12
-  - PYTHON_ENV_VER=3.4.5
-  - PYTHON_ENV_VER=pypy-5.3.1
+env:
+  matrix:
+    - PYTHON_ENV_VER=3.5.2
+    - PYTHON_ENV_VER=2.7.12
+    - PYTHON_ENV_VER=3.4.5
+    - PYTHON_ENV_VER=pypy-5.3.1
 
 services:
   - docker
