--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,7 @@
+environment:
+  global:
+    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
+
 build: off
 test_script:
-  - make test-all
+  - "%CMD_IN_ENV% make test-all
