--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,4 +7,4 @@ install:
   - copy c:\MinGW\bin\mingw32-make.exe c:\MinGW\bin\make.exe
 
 test_script:
-  - "%CMD_IN_ENV% make test-all"
+  - make test-all
