--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,9 +4,9 @@ environment:
 
 build: off
 install:
-  - "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 /release
-  - set PATH=c:\MinGW\bin;%PATH%
-  - copy c:\MinGW\bin\mingw32-make.exe c:\MinGW\bin\make.exe
+  - "C:\\Program Files\\Microsoft SDKs\\Windows\\v7.1\\Bin\\SetEnv.cmd" /x64 /release
+  - set PATH=c:\\MinGW\\bin;%PATH%
+  - copy c:\\MinGW\\bin\\mingw32-make.exe c:\\MinGW\\bin\\make.exe
 
 test_script:
   - make test-all
