--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ matrix:
       env: BUILDTYPE=doc
       services: docker
       before_install: docker pull adfinissygroup/chirp-jessie
+    - os: linux
+      env: BUILDTYPE=bdist
+      services: docker
+      before_install: docker pull adfinissygroup/chirp-jessie
     - os: osx
       env: BUILDTYPE=osx
 
