Change appveyor env to match my local

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,8 +5,8 @@ environment:
 build: off
 install:
   - "\"C:\\Program Files\\Microsoft SDKs\\Windows\\v7.1\\Bin\\SetEnv.cmd\" /x64 /release"
-  - set PATH=c:\\MinGW\\bin;%PATH%
-  - copy c:\\MinGW\\bin\\mingw32-make.exe c:\\MinGW\\bin\\make.exe
+  - set PATH=c:\\msys64\\usr\\bin;%PATH%
+  - set PATH=c:\\msys64\\mingw64\\bin;%PATH%
   - git submodule update --init --recursive
 
 test_script:
