--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libuv"]
 	path = libuv
-	url = https://github.com/libuv/libuv.git
+	url = https://github.com/concretecloud/libuv.git
 [submodule "pyproject"]
 	path = pyproject
 	url = https://github.com/adfinis-sygroup/pyproject.git
