Rename PYTHON to PYTHONVER for compat with libuv

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,10 +2,10 @@ environment:
 
   matrix:
 
-    - PYTHON: "C:\\Python27"
-    - PYTHON: "C:\\Python35"
-    - PYTHON: "C:\\Python27-x64"
-    - PYTHON: "C:\\Python35-x64"
+    - PYTHONVER: "C:\\Python27"
+    - PYTHONVER: "C:\\Python35"
+    - PYTHONVER: "C:\\Python27-x64"
+    - PYTHONVER: "C:\\Python35-x64"
 
 install:
   - "%PYTHON%\\python.exe -m pip install wheel"
