Build with openssl on Windows

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,13 @@ __pycache__
 /include/*.rst
 /.hypothesis/
 /.eggs
+/openssl/
 /FINJA
+/src/.vs/
 /src/*_etest
 /src/*.i
+/src/*.exe
+/src/*.pdb
 /Release
 /Debug
 /*.pyd
