--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
 docs:
   stage: docs
   script:
+    - aptitude -y install graphviz
     - pyenv local 3.5.2
     - ./make.py doc-all
   artifacts:
